--- a/philosopher/makefile
+++ b/philosopher/makefile
@@ -4,7 +4,7 @@ CFLAGS		=	-Wall -Wextra -Werror -Isrcs -fsanitize=address \
 
 NAME		=	philo
 
-SRCS		=	main.c fork.c libft.c threads.c messages.c\
+SRCS		=	main.c libft.c threads.c messages.c\
 				actions.c utils.c death.c\
 
 OBJ			=	${addprefix srcs/, ${SRCS:.c=.o}}
