free malloc in progress

--- a/philosopher/makefile
+++ b/philosopher/makefile
@@ -5,7 +5,7 @@ CFLAGS		=	-Wall -Wextra -Werror -Isrcs -fsanitize=address \
 NAME		=	philo
 
 SRCS		=	main.c libft.c threads.c messages.c\
-				actions.c utils.c death.c\
+				actions.c utils.c death.c clean.c\
 
 OBJ			=	${addprefix srcs/, ${SRCS:.c=.o}}
 
